--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -10,10 +10,40 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  overflow: hidden;
 }
 
 svg {
   display: inline-block;
   height: 100%;
+}
+
+#line-1 {
+  stroke-dasharray: 3500;
+  stroke-dashoffset: 0;
+  -webkit-animation: dash 5s linear forwards;
+          animation: dash 5s linear forwards;
+}
+
+@-webkit-keyframes dash {
+  from {
+    stroke-dashoffset: 3000;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes dash {
+  from {
+    stroke-dashoffset: 3000;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+.Herobox {
+  margin-top: 500px;
+  width: 100%;
+  height: 1600px;
+  background-color: pink;
 }/*# sourceMappingURL=main.css.map */
