--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,10 +10,30 @@
    width: 100%;
    height: 100%;
    text-align: center;
-   overflow: hidden;
+   
 }
 
 svg {
     display: inline-block;
     height: 100%;
+}
+
+#line-1 {
+    stroke-dasharray: 3500;
+    stroke-dashoffset: 0;
+    animation: dash 5s linear forwards;
+}
+
+@keyframes dash {
+    from { stroke-dashoffset: 3000; }
+    to { stroke-dashoffset: 0; }
+}
+
+
+.Herobox {
+    margin-top: 500px;
+    width: 100%;
+    height: 1600px;
+    background-color: pink;
+    
 }
